2009-01-07  Danny Smith  <dannysmith@users.sourceforge.net>

	PR target/36654
	* config/i386/winnt-cxx.c (i386_pe_type_dllimport_p): Check
	DECL_NOT_REALLY_EXTERN rather than !DECL_EXTERNAL

2009-01-07  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/install.texi (alpha*-dec-osf*): Remove note on 32-bit
	hosted cross-compilers generating less efficient code.

2009-01-04  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2008-06-12  Eric Botcazou  <ebotcazou@adacore.com>

	* expr.c (store_field): Do a block copy from BLKmode to BLKmode-like.
	(get_inner_reference): Use BLKmode for byte-aligned BLKmode bitfields.

2008-12-18  Andrew Pinski  <andrew_pinski@playstation.sony.com>

	PR middle-end/38565
	* gimplifier.c (gimplify_init_constructor): For constant vector
	CONSTRUCTORs use GENERIC_TREE_OPERAND instead of TREE_OPERAND.

2008-12-14  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/38062
	Backport from mainline:
	2008-04-08  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* collect2.c (write_c_file): Don't wrap in "#ifdef __cplusplus".

2008-12-12  Rainer Emrich  <r.emrich@de.tecosim.com>

	PR bootstrap/38383
	* pa64-hpux.h (LINK_GCC_C_SEQUENCE_SPEC): Don't hardcode search path
	for the milli.a library.

2008-12-12  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2008-12-12  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/38402
	* gcc/doc/md.texi: Remove Y and document Yz, Y2, Yi and Ym
	constraints for x86.

2008-12-11  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR testsuite/35677
	* emutls.c (__emutls_get_address): Make sure offset is really zero
	before initializing the object's offset.

2008-12-10  Richard Guenther  <rguenther@suse.de>

	Backport from trunk the fix for PR38051.

	PR tree-optimization/38478
	* tree-ssa-structalias.c (update_alias_info): Manually find
	written variables.

2008-12-09  Janis Johnson  <janis187@us.ibm.com>

	* doc/sourcebuild.texi (Test Directives): Fix formatting.
